<resources>
    <string name="app_name">ustamYanimda</string>
    <string name="girislogo">girisLogo</string>
    <string name="btn_cikis">çıkış</string>
    <string name="otomotiv">OTOMOTİV:</string>
    <string name="ustalari_goster">Yakındaki ustaları göster:</string>
    <string name="usta_uye_kayit">Usta olarak üye ol.</string>
    <string name="btn_geri">geri</string>
    <string name="btn_filtrele">filtrele</string>
    <string name="hmn_ara">hemen ara!</string>
    <string name="hrt_goster">haritada göster!</string>
    <string name="usta1">AHMET USTA OTOMOTİV \n ELEKTRİK:</string>
    <string name="usta2">MEHMET USTA OTOMOTİV \n ELEKTRİK:</string>
    <string name="usta3">ARİF USTA OTOMOTİV \n ELEKTRİK:</string>
    <string name="usta4">HALİL USTA OTOMOTİV \n ELEKTRİK:</string>
    <string name="usta5">MURAT USTA OTOMOTİV \n ELEKTRİK:</string>
    <string name="usta6">ERALP USTA OTOMOTİV \n ELEKTRİK:</string>
    <string name="usta7">MUSTAFA USTA OTOMOTİV \n ELEKTRİK:</string>
    <string name="usta8">SEZAİ USTA OTOMOTİV \n ELEKTRİK:</string>
    <string name="title_activity_screen3_map">Screen3_map</string>
    <string name="uyari_kayit">Tüm alanların doldurulması zorunludur!</string>
    <string name="kisisel_bilgi">Kişisel bilgileri:</string>
    <string name="kayit_finish">BAŞVURUNUZ ALINMIŞTIR EN GEÇ 23 İŞ GÜNÜ İÇERİSİNDE DÖNÜŞ SAĞLANACAKTIR.</string>
    <string name="button_cikis">ÇIKIŞ</string>
    <string name="return_anaEkran">ANA EKRAN</string>
    <string name="adres_bilgi">Adres bilgileri:</string>

</resources>