<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    tools:context=".Screen5_kayit_finish">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="366dp"
        android:layout_height="93dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="23dp"
        android:background="@color/buttons_color"
        android:text="@string/kayit_finish"
        android:textColor="@color/white"
        android:textSize="@dimen/text_bilgi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="179dp"
        android:layout_height="58dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/buttons_color"
        android:drawableLeft="@drawable/exit"
        android:text="@string/button_cikis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="183dp"
        android:layout_height="59dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="141dp"
        android:backgroundTint="@color/buttons_color"
        android:drawableLeft="@drawable/geri"
        android:text="@string/return_anaEkran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>