<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    tools:context=".Screen2">

    <ImageView
        android:id="@+id/imageview_usta1"
        android:layout_width="@dimen/imageview_width"
        android:layout_height="@dimen/imageview_height"
        android:layout_marginStart="5dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_filtre"
        app:srcCompat="@drawable/usta" />

    <ImageView
        android:id="@+id/imageview_usta2"
        android:layout_width="@dimen/imageview_width"
        android:layout_height="@dimen/imageview_height"
        android:layout_marginStart="5dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_usta1"
        app:srcCompat="@drawable/usta" />

    <ImageView
        android:id="@+id/imageview_usta3"
        android:layout_width="@dimen/imageview_width"
        android:layout_height="@dimen/imageview_height"
        android:layout_marginStart="5dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_usta2"
        app:srcCompat="@drawable/usta" />

    <ImageView
        android:id="@+id/imageview_usta4"
        android:layout_width="@dimen/imageview_width"
        android:layout_height="@dimen/imageview_height"
        android:layout_marginStart="5dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_usta3"
        app:srcCompat="@drawable/usta" />

    <ImageView
        android:id="@+id/imageview_usta5"
        android:layout_width="@dimen/imageview_width"
        android:layout_height="@dimen/imageview_height"
        android:layout_marginStart="5dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_usta4"
        app:srcCompat="@drawable/usta" />

    <ImageView
        android:id="@+id/imageview_usta6"
        android:layout_width="@dimen/imageview_width"
        android:layout_height="@dimen/imageview_height"
        android:layout_marginStart="5dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_usta5"
        app:srcCompat="@drawable/usta" />

    <Button
        android:id="@+id/btn_geri"
        android:layout_width="96dp"
        android:layout_height="49dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/btn_geri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_filtre"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_filtre"
        android:layout_width="148dp"
        android:layout_height="49dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/btn_filtrele"
        app:icon="@drawable/ic_baseline_menu_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_usta_bilgi"
        android:layout_width="@dimen/text_usta_width"
        android:layout_height="@dimen/text_usta_height"
        android:layout_marginTop="34dp"
        android:text="@string/usta1"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageview_usta1"
        app:layout_constraintTop_toBottomOf="@+id/btn_filtre" />

    <TextView
        android:id="@+id/textView_usta_bilgi2"
        android:layout_width="@dimen/text_usta_width"
        android:layout_height="@dimen/text_usta_height"
        android:layout_marginTop="28dp"
        android:text="@string/usta1"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageview_usta2"
        app:layout_constraintTop_toBottomOf="@+id/btn_haritada_goster1" />

    <TextView
        android:id="@+id/textView_usta_bilgi3"
        android:layout_width="@dimen/text_usta_width"
        android:layout_height="@dimen/text_usta_height"
        android:layout_marginTop="39dp"
        android:text="@string/usta1"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageview_usta4"
        app:layout_constraintTop_toBottomOf="@+id/btn_haritada_goster4" />

    <TextView
        android:id="@+id/textView_usta_bilgi5"
        android:layout_width="@dimen/text_usta_width"
        android:layout_height="@dimen/text_usta_height"
        android:layout_marginTop="16dp"
        android:text="@string/usta1"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageview_usta5"
        app:layout_constraintTop_toBottomOf="@+id/btn_haritada_goster3" />

    <TextView
        android:id="@+id/textView_usta_bilgi6"
        android:layout_width="@dimen/text_usta_width"
        android:layout_height="@dimen/text_usta_height"
        android:layout_marginTop="28dp"
        android:text="@string/usta1"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageview_usta6"
        app:layout_constraintTop_toBottomOf="@+id/btn_haritada_goster6" />

    <TextView
        android:id="@+id/textView_usta_bilgi4"
        android:layout_width="@dimen/text_usta_width"
        android:layout_height="@dimen/text_usta_height"
        android:layout_marginTop="31dp"
        android:text="@string/usta1"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageview_usta3"
        app:layout_constraintTop_toBottomOf="@+id/btn_haritada_goster2" />

    <Button
        android:id="@+id/btn_hemenara1"
        android:layout_width="@dimen/btn_hemen_ara_width"
        android:layout_height="@dimen/btn_hemen_ara_height"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hmn_ara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_geri" />

    <Button
        android:id="@+id/btn_hemenara2"
        android:layout_width="@dimen/btn_hemen_ara_width"
        android:layout_height="@dimen/btn_hemen_ara_height"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hmn_ara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_haritada_goster1" />

    <Button
        android:id="@+id/btn_hemenara3"
        android:layout_width="@dimen/btn_hemen_ara_width"
        android:layout_height="@dimen/btn_hemen_ara_height"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hmn_ara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_haritada_goster2" />

    <Button
        android:id="@+id/btn_hemenara4"
        android:layout_width="@dimen/btn_hemen_ara_width"
        android:layout_height="@dimen/btn_hemen_ara_height"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hmn_ara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_haritada_goster4" />

    <Button
        android:id="@+id/btn_hemenara5"
        android:layout_width="@dimen/btn_hemen_ara_width"
        android:layout_height="@dimen/btn_hemen_ara_height"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hmn_ara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_haritada_goster3" />

    <Button
        android:id="@+id/btn_hemenara6"
        android:layout_width="@dimen/btn_hemen_ara_width"
        android:layout_height="@dimen/btn_hemen_ara_height"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hmn_ara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_haritada_goster6" />

    <Button
        android:id="@+id/btn_haritada_goster1"
        android:layout_width="@dimen/btn_haritada_goster_width"
        android:layout_height="@dimen/btn_haritada_goster_height"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hrt_goster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hemenara1" />

    <Button
        android:id="@+id/btn_haritada_goster2"
        android:layout_width="@dimen/btn_haritada_goster_width"
        android:layout_height="@dimen/btn_haritada_goster_height"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hrt_goster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hemenara2" />

    <Button
        android:id="@+id/btn_haritada_goster3"
        android:layout_width="@dimen/btn_haritada_goster_width"
        android:layout_height="@dimen/btn_haritada_goster_height"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hrt_goster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hemenara4" />

    <Button
        android:id="@+id/btn_haritada_goster5"
        android:layout_width="@dimen/btn_haritada_goster_width"
        android:layout_height="@dimen/btn_haritada_goster_height"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hrt_goster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hemenara6" />

    <Button
        android:id="@+id/btn_haritada_goster6"
        android:layout_width="@dimen/btn_haritada_goster_width"
        android:layout_height="@dimen/btn_haritada_goster_height"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hrt_goster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hemenara5" />

    <Button
        android:id="@+id/btn_haritada_goster4"
        android:layout_width="@dimen/btn_haritada_goster_width"
        android:layout_height="@dimen/btn_haritada_goster_height"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/hrt_goster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hemenara3" />

</androidx.constraintlayout.widget.ConstraintLayout>