<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    tools:context=".Screen4_kayit">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_uyari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/buttons_color"
            android:text="@string/uyari_kayit"
            android:textColor="@color/text_uyari"
            android:textSize="@dimen/text_kayit_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_kisisel_bilgi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="271dp"

            android:text="@string/kisisel_bilgi"
            android:textColor="@color/white"
            android:textSize="@dimen/text_bilgi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_uyari" />

        <EditText
            android:id="@+id/editTextTextPersonName_ad"
            android:layout_width="@dimen/kayit_input_width"
            android:layout_height="@dimen/kayit_input_height"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="171dp"
            android:background="@color/buttons_color"
            android:ems="10"

            android:inputType="textPersonName"
            android:hint="AD:"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_kisisel_bilgi" />

        <EditText
            android:id="@+id/editTextTextPersonName_soyad"
            android:layout_width="@dimen/kayit_input_width"
            android:layout_height="@dimen/kayit_input_height"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="171dp"
            android:background="@color/buttons_color"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="SOYAD:"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName_ad" />

        <EditText
            android:id="@+id/editTextPhone_telefon"
            android:layout_width="@dimen/kayit_input_width"
            android:layout_height="@dimen/kayit_input_height"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="171dp"
            android:background="@color/buttons_color"
            android:ems="10"
            android:inputType="phone"
            android:hint="TELEFON NUMARASI:"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName_soyad" />

        <EditText
            android:id="@+id/editTextTextEmailAddress_mail"
            android:layout_width="@dimen/kayit_input_width"
            android:layout_height="@dimen/kayit_input_height"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="171dp"
            android:background="@color/buttons_color"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="EMAİL:"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone_telefon" />

        <TextView
            android:id="@+id/textView_bilgi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="269dp"
            android:text="@string/adres_bilgi"
            android:textColor="@color/white"
            android:textSize="@dimen/text_bilgi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress_mail" />

        <Spinner
            android:id="@+id/spinner_il"
            android:layout_width="142dp"
            android:layout_height="31dp"

            android:layout_marginStart="17dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="12dp"
            android:background="@color/buttons_color"
            android:drawSelectorOnTop="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPostalAddress_il"
            app:layout_constraintTop_toBottomOf="@+id/textview_uyari" />

        <EditText
            android:id="@+id/editTextTextPostalAddress_il"
            android:layout_width="@dimen/kayit_input_width"
            android:layout_height="@dimen/kayit_input_height"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="17dp"
            android:background="@color/buttons_color"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="İL:"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/spinner_il"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_bilgi2" />

        <EditText
            android:id="@+id/editTextTextPostalAddress_ilçe"
            android:layout_width="@dimen/kayit_input_width"
            android:layout_height="@dimen/kayit_input_height"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="17dp"
            android:background="@color/buttons_color"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="İLÇE:"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/spinner_ilçe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress_il" />

        <Spinner
            android:id="@+id/spinner_ilçe"
            android:layout_width="142dp"
            android:layout_height="31dp"

            android:layout_marginStart="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:background="@color/buttons_color"
            android:drawSelectorOnTop="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPostalAddress_ilçe"
            app:layout_constraintTop_toBottomOf="@+id/spinner_il" />

        <EditText
            android:id="@+id/editTextTextPostalAddress_mahalle"
            android:layout_width="@dimen/kayit_input_width"
            android:layout_height="@dimen/kayit_input_height"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="171dp"
            android:background="@color/buttons_color"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="MAHALLE/SOKAK:"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress_ilçe" />

        <TextView
            android:id="@+id/textView_notunuz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="141dp"
            android:text="NOTUNUZ:(ZORUNLU DEĞİL)"
            android:textColor="@color/white"
            android:textSize="@dimen/text_bilgi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress_mahalle" />

        <EditText
            android:id="@+id/editTextTextPersonName_not"
            android:layout_width="396dp"
            android:layout_height="63dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/buttons_color"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="NOT:"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_notunuz" />

        <Button
            android:id="@+id/button_gonder_kayit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="158dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="14dp"
            android:backgroundTint="@color/buttons_color"
            android:text="Gönder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName_not" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>